--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
-    <title>Payday Loans Online up to $1,000</title>
+    <title>Unsubscribe</title>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -27,7 +27,7 @@
 <section class="header-wrap">
     <header>
         <div class="logo">
-            <a href="index.html" class="ir">loanonline.us</a>
+            <a href="index.html" class="ir">ExtraLend.com</a>
         </div>
         <div class="slogan-wrap">
             <span class="slogan">Get access to cash advance lenders when you need it most.
@@ -47,7 +47,7 @@
                 <a class="top-nav-link" href="how-it-works.html">How It Works</a>
             </li>
             <li class="top-nav-item ">
-                <a class="top-nav-link" href="faq.html">F.A.Q</a>
+                <a class="top-nav-link" href="privacy-policy.html">Privacy Policy</a>
             </li>
             <li class="top-nav-item ">
                 <a class="top-nav-link" href="about-us.html">About Us</a>
@@ -56,147 +56,41 @@
     </nav>
 </section>
 
-<section class="banner">
-    <div class="form-container">
-        <div class="form-wrap">
-            <div class="form-text">
-                <span class="online-cash">
-                    Fast Payday Loans up to $1,000
-                </span>
-                <span class="get-started">Start Your Online Form</span>
-                
-            </div>
-            <div class="form">
-                <form action="apply.html" method="get" id="lead-form" novalidate>
-                    <div class="form-row">
-                        <span class="custome-select-wrap js_element_error">
-                            <select class="custome-select" name="requested_amount" id="sa">
-                                <option value="100">100</option>
-                                <option value="200">200</option>
-                                <option value="300" selected="selected">300</option>
-                                <option value="400">400</option>
-                                <option value="500">500</option>
-                                <option value="600">600</option>
-                                <option value="700">700</option>
-                                <option value="800">800</option>
-                                <option value="900">900</option>
-                                <option value="1000">1000</option>
-                            </select>
-                        </span>
-                        <span class="js_element_error">
-                            <input id="sz" size="5" maxlength="5" name="zip" type="text" placeholder="ZIP" tabindex="2"/>
-                        </span>
-                    </div>
-                    <div class="form-row">
-                        <span class="js_element_error">
-                            <input id="sf" name="first_name" type="text" placeholder="First Name">
-                        </span>
-                        <span class="js_element_error">
-                            <input id="sl" name="last_name" type="text" placeholder="Last Name">
-                        </span>
-                    </div>
-                    <button class="btn btn-yellow">Get Started</button>
-                    <span class="custome-checkbox-label">
-                        By submitting your information you agree to
-                        <a target="_blank" href="privacy-policy.html">Privacy Policy</a>,
-                        <a target="_blank" href="terms-of-use.html">Terms of Use</a> and
-                        <a target="_blank" href="responsible-lending.html">Responsible Lending
-                            Practices</a>
-                    </span>
-                    <input type="hidden" name="loan_type" value="payday"/>
-                </form>
-            </div>
+<section class="form-top">
+    <div class="form-wrap">
+        <div class="form-text">
+            <span class="online-cash">Unsubscribe in one click</span>
         </div>
+        <div class="form">
+
+            <form action="" method="get" id="js-un_subscribe-form" novalidate>
+                <div class="form-row">
+                     <input id="js_email" name="email" type="text" placeholder="Email" tabindex="3" value=""/>
+                     <div class="form__error"></div>
+                </div>
+                <button class="btn btn-yellow">Unsubscribe</button>
+
+            </form>
+            <p id="js-main-success" style="display: none">
+                Thank you! We successfully deleted your email from our list. If you change your mind, simply register on our website again anytime you want. We will be glad to contact more.
+            </p>
+        </div>
+
     </div>
 </section>
 
 <section class="main-container">
-    <div class="features-wrap">
-        <div class="features-item">
-            <div class="feature-title f1">Request Online</div>
-            <div class="feature-text">There are no fees to submit your request and no obligation
-                to accept the loan
-            </div>
-        </div>
-        <div class="features-item">
-            <div class="feature-title f2">Security</div>
-            <div class="feature-text">You can be sure that your information remains absolutely
-                secure with us
-            </div>
-        </div>
-        <div class="features-item">
-            <div class="feature-title f3">Get Results Fast</div>
-            <div class="feature-text">After you submit your information we can connect you with a
-                lender
-            </div>
-        </div>
-        <div class="features-item">
-            <div class="feature-title f4">Cash Straight Away</div>
-            <div class="feature-text">If you agree to the lender's terms, e-sign the contract
-                and have cash deposited into your account
-            </div>
-        </div>
-    </div>
     <div class="article">
-        <h1 class="article-title">How to Get a Loan?</h1>
-        <p>
-            Online payday loans can be the right solution to your short-term financial troubles
-            because they are easily obtained and easily repaid, and the costs associated with
-            them are highly comparable to other forms of credit as long as they are repaid on
-            time. Bad credit or no credit are also welcomed to try to get connected with a lender.
-        </p>
-        <div class="step-wrap">
-            <div class="step">
-                <div class="step-title">
-                    <span class="step-number">1</span>
-                    Fill Out Online Form
-                </div>
-                <div class="step-text">
-                    Getting a short term loan starts with submitting the quick online form that
-                    we have provided. We will only ask you for the information we need to connect
-                    you with a lender. We also protect your information with 256-bit secure SSL
-                    encryption technology so you can rest assured we are concerned about your
-                    privacy.
-                </div>
-            </div>
-            <div class="step">
-                <div class="step-title">
-                    <span class="step-number">2</span>
-                    Get Results Fast
-                </div>
-                <div class="step-text">
-                    After your information has been submitted, you can receive an offer from one
-                    of the lenders in our network. Please take the time to review the offer
-                    carefully — including all of the costs and terms — before making your final
-                    decision.
-                </div>
-            </div>
-            <div class="step">
-                <div class="step-title">
-                    <span class="step-number">3</span>
-                    Complete Your Request
-                </div>
-                <div class="step-text">
-                    After you have made your decision, you will need to provide your electronic
-                    signature which will enter you into a contract with your lender. Then that
-                    lender can deposit the offered funds into your bank account in as soon as
-                    the following business day.
-                </div>
-            </div>
+        <div class="article-p">
+            <p>Here at ExtraLend.com we respect your privacy. So, if you decide you don’t want to
+                receive messages or emails from us, we are ready to comply with your request in one click! Simply check the mail in this
+                field. If this is your contact, click UNSUBSCRIBE button, and we will delete your information from our list.
+            </p>
         </div>
-    </div>
-    <div class="block carousel-height" style="height: 225px;">
-        <p class="block-title">Do I Qualify for a Loan?</p>
-        <ul class="list-bullet">
-            <li>You must be at least 18 years old</li>
-            <li>You must live and work legally within the US</li>
-            <li>You must be employed with the same employer for at least 90 days consecutively
-            </li>
-            <li>You must have a valid email address and working telephone number</li>
-            <li>You must have a bank account in your name</li>
-        </ul>
+        <div class=""></div>
     </div>
 </section>
+
 <section class="footer-wrap">
     <footer>
         <ul class="footer-nav">
@@ -281,7 +175,7 @@
                     in our network can provide up to $1,000. The limits and regulations vary
                     from state to state. We remind that short-term loans are not a long term
                     financial solution.
-                </p>
+				</p>
 				<p>
 				    To help government fight identity theft, the funding of 
 					terrorism and money laundering activities, and to help attempt to verify a
@@ -399,6 +293,7 @@
     </footer>
 </section>
 <script src="files/jquery-1.12.1.min.js"></script>
+<script src="files/jquery.validate.js"></script>
 <script>
     function deploy(el) {
         var id = el.getAttribute("data-deploy-title"),
@@ -414,6 +309,63 @@
             $(el).toggleClass("active");
         }
     }
+    var $form = $("#js-un_subscribe-form");
+
+    $.urlParam = function (name) {
+        var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
+        if (!results) {
+            return '';
+        }
+        return results[1] || '';
+    };
+    $('#js_email').val(decodeURIComponent($.urlParam('email')));
+
+    var validator = $form.validate({
+        rules: {
+            'email': {
+                email: true,
+                required: true
+            }
+        },
+        errorClass: 'validationError',
+        validClass: 'validationPassed',
+        errorPlacement: function(error, element) {
+            element.next('.form__error').html(error);
+        },
+        highlight: function (element, errorClass, validClass) {
+            var $element = $form.find(element);
+            $element.parent().addClass(errorClass).removeClass(validClass);
+        },
+        unhighlight: function (element, errorClass, validClass) {
+            var $element = $form.find(element);
+            $element.parent().removeClass(errorClass).addClass(validClass);
+        },
+        submitHandler: function(form) {
+            $.ajax({
+                url: 'https://leadapi.net/api/payday-us/unsubscribe',
+                dataType: 'jsonp',
+                type: 'GET',
+                data: $form.serializeArray(),
+                success: function (data) {
+                    if (data.result == 'success') {
+                        $('#js-main-success').toggle();
+                        $form.toggle();
+                    } else if (data.result == 'errors') {
+                        var $element = $form.find('#js_email');
+                        $element.parent().addClass('validationError').removeClass('validationPassed');
+                        $element.next('.form__error').html(data.message);
+                    } else {
+                        alert('Invalid response from server. Please try again later.');
+                    }
+                },
+                error: function () {
+                    $('#js-main-success').toggle();
+                    $form.toggle();
+                    alert('Invalid response from server. Please try again later.');
+                }
+            });
+        }
+    });
 </script>
 </body>
 </html>
