--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
-    <title>Payday Loans Online up to $1,000</title>
+    <title>Contact Us</title>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -27,7 +27,7 @@
 <section class="header-wrap">
     <header>
         <div class="logo">
-            <a href="index.html" class="ir">loanonline.us</a>
+            <a href="index.html" class="ir">ExtraLend.com</a>
         </div>
         <div class="slogan-wrap">
             <span class="slogan">Get access to cash advance lenders when you need it most.
@@ -47,7 +47,7 @@
                 <a class="top-nav-link" href="how-it-works.html">How It Works</a>
             </li>
             <li class="top-nav-item ">
-                <a class="top-nav-link" href="faq.html">F.A.Q</a>
+                <a class="top-nav-link" href="privacy-policy.html">Privacy Policy</a>
             </li>
             <li class="top-nav-item ">
                 <a class="top-nav-link" href="about-us.html">About Us</a>
@@ -55,148 +55,77 @@
         </ul>
     </nav>
 </section>
+<section class="form-top">
+    <div class="form-wrap">
+        <div class="form-text">
+            <span class="online-cash">Online Cash Loans up to $1,000</span>
+            <span class="get-started">Get Started Today!</span>
+        </div>
+        <div class="form">
 
-<section class="banner">
-    <div class="form-container">
-        <div class="form-wrap">
-            <div class="form-text">
-                <span class="online-cash">
-                    Fast Payday Loans up to $1,000
-                </span>
-                <span class="get-started">Start Your Online Form</span>
-                
-            </div>
-            <div class="form">
-                <form action="apply.html" method="get" id="lead-form" novalidate>
-                    <div class="form-row">
-                        <span class="custome-select-wrap js_element_error">
-                            <select class="custome-select" name="requested_amount" id="sa">
-                                <option value="100">100</option>
-                                <option value="200">200</option>
-                                <option value="300" selected="selected">300</option>
-                                <option value="400">400</option>
-                                <option value="500">500</option>
-                                <option value="600">600</option>
-                                <option value="700">700</option>
-                                <option value="800">800</option>
-                                <option value="900">900</option>
-                                <option value="1000">1000</option>
-                            </select>
-                        </span>
-                        <span class="js_element_error">
-                            <input id="sz" size="5" maxlength="5" name="zip" type="text" placeholder="ZIP" tabindex="2"/>
-                        </span>
-                    </div>
-                    <div class="form-row">
-                        <span class="js_element_error">
-                            <input id="sf" name="first_name" type="text" placeholder="First Name">
-                        </span>
-                        <span class="js_element_error">
-                            <input id="sl" name="last_name" type="text" placeholder="Last Name">
-                        </span>
-                    </div>
-                    <button class="btn btn-yellow">Get Started</button>
-                    <span class="custome-checkbox-label">
-                        By submitting your information you agree to
-                        <a target="_blank" href="privacy-policy.html">Privacy Policy</a>,
-                        <a target="_blank" href="terms-of-use.html">Terms of Use</a> and
-                        <a target="_blank" href="responsible-lending.html">Responsible Lending
-                            Practices</a>
+
+            <form action="apply.html" method="get" id="lead-form" novalidate>
+                <div class="form-row">
+                    <span class="custome-select-wrap js_element_error">
+                        <select class="custome-select" name="requested_amount" id="sa">
+                            <option value="100">100</option>
+                            <option value="200">200</option>
+                            <option value="300" selected="selected">300</option>
+                            <option value="400">400</option>
+                            <option value="500">500</option>
+                            <option value="600">600</option>
+                            <option value="700">700</option>
+                            <option value="800">800</option>
+                            <option value="900">900</option>
+                            <option value="1000">1000</option>
+                        </select>
                     </span>
-                    <input type="hidden" name="loan_type" value="payday"/>
-                </form>
-            </div>
+                    <span class="js_element_error">
+                        <input id="sz" size="5" maxlength="5" name="zip" type="text" placeholder="ZIP" tabindex="2"/>
+                    </span>
+                </div>
+                <div class="form-row">
+                    <span class="js_element_error">
+                        <input id="sf" name="first_name" type="text" placeholder="First Name">
+                    </span>
+                    <span class="js_element_error">
+                        <input id="sl" name="last_name" type="text" placeholder="Last Name">
+                    </span>
+                </div>
+                <button class="btn btn-yellow">Get Started</button>
+                <span class="custome-checkbox-label">
+                    By submitting your information you agree to
+                    <a target="_blank" href="privacy-policy.html">Privacy Policy</a>,
+                    <a target="_blank" href="terms-of-use.html">Terms of Use</a>, and
+                    <a target="_blank" href="responsible-lending.html">Responsible Lending
+                        Practices</a>
+                </span>
+            </form>
         </div>
     </div>
 </section>
+
 
 <section class="main-container">
-    <div class="features-wrap">
-        <div class="features-item">
-            <div class="feature-title f1">Request Online</div>
-            <div class="feature-text">There are no fees to submit your request and no obligation
-                to accept the loan
-            </div>
-        </div>
-        <div class="features-item">
-            <div class="feature-title f2">Security</div>
-            <div class="feature-text">You can be sure that your information remains absolutely
-                secure with us
-            </div>
-        </div>
-        <div class="features-item">
-            <div class="feature-title f3">Get Results Fast</div>
-            <div class="feature-text">After you submit your information we can connect you with a
-                lender
-            </div>
-        </div>
-        <div class="features-item">
-            <div class="feature-title f4">Cash Straight Away</div>
-            <div class="feature-text">If you agree to the lender's terms, e-sign the contract
-                and have cash deposited into your account
-            </div>
-        </div>
-    </div>
     <div class="article">
-        <h1 class="article-title">How to Get a Loan?</h1>
-        <p>
-            Online payday loans can be the right solution to your short-term financial troubles
-            because they are easily obtained and easily repaid, and the costs associated with
-            them are highly comparable to other forms of credit as long as they are repaid on
-            time. Bad credit or no credit are also welcomed to try to get connected with a lender.
-        </p>
-        <div class="step-wrap">
-            <div class="step">
-                <div class="step-title">
-                    <span class="step-number">1</span>
-                    Fill Out Online Form
-                </div>
-                <div class="step-text">
-                    Getting a short term loan starts with submitting the quick online form that
-                    we have provided. We will only ask you for the information we need to connect
-                    you with a lender. We also protect your information with 256-bit secure SSL
-                    encryption technology so you can rest assured we are concerned about your
-                    privacy.
-                </div>
-            </div>
-            <div class="step">
-                <div class="step-title">
-                    <span class="step-number">2</span>
-                    Get Results Fast
-                </div>
-                <div class="step-text">
-                    After your information has been submitted, you can receive an offer from one
-                    of the lenders in our network. Please take the time to review the offer
-                    carefully — including all of the costs and terms — before making your final
-                    decision.
-                </div>
-            </div>
-            <div class="step">
-                <div class="step-title">
-                    <span class="step-number">3</span>
-                    Complete Your Request
-                </div>
-                <div class="step-text">
-                    After you have made your decision, you will need to provide your electronic
-                    signature which will enter you into a contract with your lender. Then that
-                    lender can deposit the offered funds into your bank account in as soon as
-                    the following business day.
-                </div>
-            </div>
+        <h1 class="article-title">Contact Us</h1>
+        <div class="article-p"><p>It is our goal to provide you with the best, friendliest and
+            most knowledgeable customer service experience possible. If you have questions about
+            our website or the loan in general that are not answered in our FAQ section, please
+            use any of the methods below to contact us. We will respond to your queries within
+            48 hours. </p>
+            <p>Please remember that this service is not a lender. In order to protect your
+                privacy, we do not have any information regarding your loan or offers for loans.
+                These questions should be directed to the lender who provided the loan or
+                offer. </p>
+            <p>Email: contact@extralend.com</p>
+
         </div>
-    </div>
-    <div class="block carousel-height" style="height: 225px;">
-        <p class="block-title">Do I Qualify for a Loan?</p>
-        <ul class="list-bullet">
-            <li>You must be at least 18 years old</li>
-            <li>You must live and work legally within the US</li>
-            <li>You must be employed with the same employer for at least 90 days consecutively
-            </li>
-            <li>You must have a valid email address and working telephone number</li>
-            <li>You must have a bank account in your name</li>
-        </ul>
+        <div class="">
+        </div>
     </div>
 </section>
+
 <section class="footer-wrap">
     <footer>
         <ul class="footer-nav">
@@ -281,7 +210,7 @@
                     in our network can provide up to $1,000. The limits and regulations vary
                     from state to state. We remind that short-term loans are not a long term
                     financial solution.
-                </p>
+				</p>
 				<p>
 				    To help government fight identity theft, the funding of 
 					terrorism and money laundering activities, and to help attempt to verify a
