--- a/how-it-works.html
+++ b/how-it-works.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
-    <title>Payday Loans Online up to $1,000</title>
+    <title>How It Works</title>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -27,7 +27,7 @@
 <section class="header-wrap">
     <header>
         <div class="logo">
-            <a href="index.html" class="ir">loanonline.us</a>
+            <a href="index.html" class="ir">ExtraLend.com</a>
         </div>
         <div class="slogan-wrap">
             <span class="slogan">Get access to cash advance lenders when you need it most.
@@ -55,148 +55,133 @@
         </ul>
     </nav>
 </section>
+<section class="form-top">
+    <div class="form-wrap">
+        <div class="form-text">
+            <span class="online-cash">Online Cash Loans up to $1,000</span>
+            <span class="get-started">Get Started Today!</span>
+        </div>
+        <div class="form">
 
-<section class="banner">
-    <div class="form-container">
-        <div class="form-wrap">
-            <div class="form-text">
-                <span class="online-cash">
-                    Fast Payday Loans up to $1,000
-                </span>
-                <span class="get-started">Start Your Online Form</span>
-                
-            </div>
-            <div class="form">
-                <form action="apply.html" method="get" id="lead-form" novalidate>
-                    <div class="form-row">
-                        <span class="custome-select-wrap js_element_error">
-                            <select class="custome-select" name="requested_amount" id="sa">
-                                <option value="100">100</option>
-                                <option value="200">200</option>
-                                <option value="300" selected="selected">300</option>
-                                <option value="400">400</option>
-                                <option value="500">500</option>
-                                <option value="600">600</option>
-                                <option value="700">700</option>
-                                <option value="800">800</option>
-                                <option value="900">900</option>
-                                <option value="1000">1000</option>
-                            </select>
-                        </span>
-                        <span class="js_element_error">
-                            <input id="sz" size="5" maxlength="5" name="zip" type="text" placeholder="ZIP" tabindex="2"/>
-                        </span>
-                    </div>
-                    <div class="form-row">
-                        <span class="js_element_error">
-                            <input id="sf" name="first_name" type="text" placeholder="First Name">
-                        </span>
-                        <span class="js_element_error">
-                            <input id="sl" name="last_name" type="text" placeholder="Last Name">
-                        </span>
-                    </div>
-                    <button class="btn btn-yellow">Get Started</button>
-                    <span class="custome-checkbox-label">
-                        By submitting your information you agree to
-                        <a target="_blank" href="privacy-policy.html">Privacy Policy</a>,
-                        <a target="_blank" href="terms-of-use.html">Terms of Use</a> and
-                        <a target="_blank" href="responsible-lending.html">Responsible Lending
-                            Practices</a>
+
+            <form action="apply.html" method="get" id="lead-form" novalidate>
+                <div class="form-row">
+                    <span class="custome-select-wrap js_element_error">
+                        <select class="custome-select" name="requested_amount" id="sa">
+                            <option value="100">100</option>
+                            <option value="200">200</option>
+                            <option value="300" selected="selected">300</option>
+                            <option value="400">400</option>
+                            <option value="500">500</option>
+                            <option value="600">600</option>
+                            <option value="700">700</option>
+                            <option value="800">800</option>
+                            <option value="900">900</option>
+                            <option value="1000">1000</option>
+                        </select>
                     </span>
-                    <input type="hidden" name="loan_type" value="payday"/>
-                </form>
-            </div>
+                    <span class="js_element_error">
+                        <input id="sz" size="5" maxlength="5" name="zip" type="text" placeholder="ZIP" tabindex="2"/>
+                    </span>
+                </div>
+                <div class="form-row">
+                    <span class="js_element_error">
+                        <input id="sf" name="first_name" type="text" placeholder="First Name">
+                    </span>
+                    <span class="js_element_error">
+                        <input id="sl" name="last_name" type="text" placeholder="Last Name">
+                    </span>
+                </div>
+                <button class="btn btn-yellow">Get Started</button>
+                <span class="custome-checkbox-label">
+                    By submitting your information you agree to
+                    <a target="_blank" href="privacy-policy.html">Privacy Policy</a>,
+                    <a target="_blank" href="terms-of-use.html">Terms of Use</a>, and
+                    <a target="_blank" href="responsible-lending.html">Responsible Lending
+                        Practices</a>
+                </span>
+            </form>
         </div>
     </div>
 </section>
 
 <section class="main-container">
-    <div class="features-wrap">
-        <div class="features-item">
-            <div class="feature-title f1">Request Online</div>
-            <div class="feature-text">There are no fees to submit your request and no obligation
-                to accept the loan
-            </div>
-        </div>
-        <div class="features-item">
-            <div class="feature-title f2">Security</div>
-            <div class="feature-text">You can be sure that your information remains absolutely
-                secure with us
-            </div>
-        </div>
-        <div class="features-item">
-            <div class="feature-title f3">Get Results Fast</div>
-            <div class="feature-text">After you submit your information we can connect you with a
-                lender
-            </div>
-        </div>
-        <div class="features-item">
-            <div class="feature-title f4">Cash Straight Away</div>
-            <div class="feature-text">If you agree to the lender's terms, e-sign the contract
-                and have cash deposited into your account
-            </div>
-        </div>
-    </div>
     <div class="article">
-        <h1 class="article-title">How to Get a Loan?</h1>
-        <p>
-            Online payday loans can be the right solution to your short-term financial troubles
-            because they are easily obtained and easily repaid, and the costs associated with
-            them are highly comparable to other forms of credit as long as they are repaid on
-            time. Bad credit or no credit are also welcomed to try to get connected with a lender.
-        </p>
-        <div class="step-wrap">
-            <div class="step">
-                <div class="step-title">
-                    <span class="step-number">1</span>
-                    Fill Out Online Form
-                </div>
-                <div class="step-text">
-                    Getting a short term loan starts with submitting the quick online form that
-                    we have provided. We will only ask you for the information we need to connect
-                    you with a lender. We also protect your information with 256-bit secure SSL
-                    encryption technology so you can rest assured we are concerned about your
-                    privacy.
-                </div>
-            </div>
-            <div class="step">
-                <div class="step-title">
-                    <span class="step-number">2</span>
-                    Get Results Fast
-                </div>
-                <div class="step-text">
-                    After your information has been submitted, you can receive an offer from one
-                    of the lenders in our network. Please take the time to review the offer
-                    carefully — including all of the costs and terms — before making your final
-                    decision.
-                </div>
-            </div>
-            <div class="step">
-                <div class="step-title">
-                    <span class="step-number">3</span>
-                    Complete Your Request
-                </div>
-                <div class="step-text">
-                    After you have made your decision, you will need to provide your electronic
-                    signature which will enter you into a contract with your lender. Then that
-                    lender can deposit the offered funds into your bank account in as soon as
-                    the following business day.
-                </div>
-            </div>
+        <h1 class="article-title">How Online Cash Loans Work</h1>
+        <div class="article-p"><p>This is a service which primary goal is to
+            connect consumers like you with short term lenders whenever unexpected financial
+            emergencies arise. We can successfully connect a great part of individuals who submit
+            request a lender willing to provide the funds they need. </p>
+            <p><strong>All About Short Term Loans </strong></p>
+            <p><i>Our Secure Online Form Submitting is Fast and Free </i></p>
+            <p>The online form we provide only takes about two minutes to fill out, is
+                completely secured with top-notch security software, and is free for you to fill
+                out. We only ask for the information we need to connect you with a lender in our
+                network, and after you submit this information, it is forwarded to our lenders
+                who can provide you with up to $1,000 in cash in as little as one business day.
+                In many cases, you will not be asked to fax a single document. </p>
+            <p><i>Review the No-Obligation Offers </i></p>
+            <p>In a matter of minutes after we have processed your information, you can be
+                connected with one of our lenders and can get an offer that suits your
+                requirements and your details. You are never under obligations to accept any
+                offer, so if the offer you receive is not satisfactory, you can simply reject
+                it, and it will cost you nothing. </p>
+            <p><i>Getting Your Cash </i></p>
+            <p>After getting the offer that suits your financial needs, you will go through the
+                details of your loan agreement. Then, your lender will ask you to provide your
+                electronic signature in order to enter into a contract. Once this step has been
+                completed, your lender will usually deposit the loan amount for which you were
+                approved into your checking account on the following business day. </p>
+            <p><i>Repaying Your Loan </i></p>
+            <p>Some of our lenders can make the loan repayment process incredibly simple. If you
+                opt for the direct withdrawal option while closing your loan agreement, you can
+                have the repayment done for you electronically. In most cases, all you will need
+                to do in order to repay your loan is to ensure that the repayment amount—the
+                amount of the loan plus any applicable fees and interest—is available for
+                withdrawal on the scheduled date. This way, you do not have to mail any checks
+                or money orders and you do not have to visit a retail location. This paperless
+                process also helps to reduce the likelihood of late payments and may even save
+                you money. </p>
+            <p><strong>Short Term Loan Qualifications </strong></p>
+            <p>Qualifying for a short term loan is simpler and easier than qualifying for other
+                forms of consumer credit. These are the basic qualifications associated with
+                obtaining a short term cash loan:</p>
+            <p>• You must be 18 years of age or older<br/>
+                • You must legally live and work in the United States<br/>
+                • You must be employed with the same employer for a minimum of 90 days<br/>
+                • You must have a bank account that is not currently overdrawn<br/>
+                • You must have a valid email address and working telephone number<br/>
+                • You must meet minimum income requirements </p>
+            <p><strong>Your Credit History Is Usually Not the Critical Issue</strong></p>
+            <p>Even though the lenders that partner with Lendew.com do perform credit checks if
+                necessary, individuals with imperfect credit or no credit at all usually can
+                qualify for loans anyway. The lenders in our network may also perform
+                alternative credit checks with the companies like TeleTrack or DP. These
+                verifications help to ensure that you are not currently in bankruptcy and that
+                you do not have outstanding loans with other lenders. These checks usually do
+                not affect your credit score. </p>
+            <p><strong>Getting the Biggest Benefit from Short Term Loans </strong></p>
+            <p>In order to truly enjoy the benefits associated with short term loans, it is
+                important for you to repay your loan on time. This will help you to avoid
+                potentially high late fees and build a better business relationship with your
+                lender of choice. You should always ensure that you will have the funds
+                available to repay your loan before you request a loan, and you should contact your
+                lender immediately to discuss the available options if you will be unable to
+                repay your loan on time. </p>
+            <p><strong>How We Can Help </strong></p>
+            <p>We are always available to answer your questions about this website, our services
+                and short term loans in general. We strive to provide you with outstanding
+                customer support and will answer your inquiries as quickly as possible. If you
+                have issues with any particular loan deal with one of our lenders, please,
+                contact that lender directly, because we are not authorized to have details
+                regarding any loan agreement you've entered.</p>
         </div>
-    </div>
-    <div class="block carousel-height" style="height: 225px;">
-        <p class="block-title">Do I Qualify for a Loan?</p>
-        <ul class="list-bullet">
-            <li>You must be at least 18 years old</li>
-            <li>You must live and work legally within the US</li>
-            <li>You must be employed with the same employer for at least 90 days consecutively
-            </li>
-            <li>You must have a valid email address and working telephone number</li>
-            <li>You must have a bank account in your name</li>
-        </ul>
+
+        <div class="">
+        </div>
     </div>
 </section>
+
 <section class="footer-wrap">
     <footer>
         <ul class="footer-nav">
