--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ IMG.displayed {
 .block0 {
 width: 320px;
 height: 122px;
-background-image: url('loans.jpg');
+background-image: url('loans1.jpg');
 }
    table {
     width: 320px; 
