--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
 <meta name="viewport" content="width=device-width; initial-scale=1.0;">
 <meta http-equiv="Content-Type" content="text/html;  charset=utf-8">
-<title>Loan Online</title>
+<title>Apply Loans Online</title>
 <link rel="canonical" href="https://www.loanonline.us/">
 <style>
 @media screen and (min-width: 490px){
@@ -28,6 +28,11 @@ background-image: url('loans.jpg');
    table {
     width: 824px; 
     border: 10px solid #808080; /* Граница вокруг таблицы */
+   }
+td {
+    background: #FFFFFF; /* Цвет фона */
+    border: 1px solid #339966; /* Граница вокруг ячеек */
+    padding: 10px; /* Поля в ячейках */ 
    }
 .center {
   margin-left: auto;
@@ -75,44 +80,48 @@ IMG.displayed {
 <p><a href="https://extralend.com/?aid=7378">
 <img  class="displayed" src="extralend.jpg" width="300" height="250"></a></p>
 
-<p>Apply For A Loan<br>
+<p><h1>Apply Loans Online</h1><br>
+<b>Quick Payday Cash Loan - Get A Low Cost Cash Advance</b>
+<p>Once you need a little extra buck to look after a financial emergency, an 
+instant payday advances loan provides you the instant cash that you need. An 
+advance loan is a brief-term loan for a little amount of money, awarded against 
+the next paycheck, to repay any immediate expenses you might be faced with, 
+whether it be medical bills or bills or to prevent them from bouncing.<br>
 <br>
-Once in a while, we have taken away a bank loan for just one reason or another. 
-It seems to be a part of modern life, as everyone I know has got a loan. We just 
-get one loan paid off, have a limited period of sense smug and then find that 
-people need to use for financing again. This may be to consolidate bad debts, 
-purchase home advancements or buy an automobile. We also got one out to place 
-our daughter through university or college.<br>
+Competition Reduces Interest Rates<br>
 <br>
-It isn't the actual loan that bothers me, I've accepted it as a means of life, 
-it is the process you have to undergo to get one. Perhaps our parent's 
-technology got the right idea. They wouldn't want to obtain a loan. If they 
-couldn't find the money for something, they simply kept up until that they had 
-enough money. My technology does not have the patience to wait. So, we must leap 
-through the hoops whenever we want one.<br>
+With the simple operational procedures, the quick payday advances loan industry 
+is continuing to grow at an exponential rate. It has resulted in the creation of 
+a highly competitive market in the payday loan sector. Lenders have been forced 
+to decrease interest rates and maintain transparency and fairness in their 
+dealings with their customers. Today, you can get an easy loan for a $100 amount 
+for only $15 for a 2-week period! Not only that, but payday loaning companies 
+also come up with zero or no interest techniques for clients! So a small amount 
+of online research in this field will be worthy of your time and energy.<br>
 <br>
-I always feel just like a gathering with the bank manager is similar to going to 
-the top Teacher's office. Personally, I think guilty but I don't know what I 
-sense guilty about. The director is always correctly friendly and helpful but I 
-still feel just like I'm in the dentist's ready room. Maybe, it is because of 
-some Protestant work ethic instilled in me by my parents. WHENEVER I obtain a 
-loan, I'm requesting money I haven't earned. Obviously, I know this is the 
-one-way banks make their revenue and the complete banking system would collapse 
-if it were not for folks like me.<br>
+Easy To Qualify For<br>
 <br>
-I hate filling in forms and the same forms come around, again and again, asking 
-the same questions. Every time we obtain a loan, we have to prove id, even 
-though we have been going to the same branch of our standard bank for years. 
-They need to execute a credit check on us. Ironically, we've friends who have 
-been refused to finance because they have no credit rating. They may have good 
-jobs and may easily spend the money for repayments, but asking for a loan for 
-the very first time means that you have no credit score to be assessed. We've 
-plenty of history! The worst thing, whenever we apply for a loan, is those ten 
-minutes approximately whenever we are remaining alone at work whilst the 
-administrator pops out to do all the checks. We've never been refused but almost 
-always there is a first time. It's wintry perspire time as he comes home into 
-the room. It's ok! He's smiling and we don't have to do that again, until the 
-next time.</p>
+An instant cash payday loan is an easy and simple loan to qualify for today, 
+without the requirement of any lengthy project article submissions or credit 
+bank checks. You may need the money for anything, your cash loan will be 
+approved so long as you are over 18 years of age, have an everlasting address, 
+an active bank account where in fact the money can be immediately wired, and a 
+normal source of income, salary or pension.<br>
+<br>
+Some quick payday loan companies impose certain other requirements too. For 
+example, they could want that you ought to be earning a minimum of $1000 a month. 
+Some others need you to have been around in a career with the same firm for 3 
+months, before taking the loan. In most cases, the more strict the rules, the 
+better rates you can get.<br>
+<br>
+And although payday loans don't require any credit look for approval, you may 
+well be asked to fax your bank statement and previous few pay stubs as proof of 
+income. You may get a faxless quick payday advances loan too, where you won't be 
+asked to fax any paperwork. However, the rates on such loans are just a little 
+higher. Although the difference would be simply a few us dollars for 14 days, it 
+can total a considerable total, if you are borrowing a sizable sum of money, 
+like say $1000, or if you need to extend your payday loan beyond 14 days.</p>
+
 </td>
 	</tr>
 </table>
