--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@ background-image: url('loans1.jpg');
     width: 320px; 
     border: 10px solid #808080; /* Граница вокруг таблицы */
    }
+td {
+    background: #FFFFFF; /* Цвет фона */
+    border: 1px solid #339966; /* Граница вокруг ячеек */
+    padding: 10px; /* Поля в ячейках */ 
+   }
 .center {
   margin-left: auto;
   margin-right: auto;
