--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <style>
 @media screen and (min-width: 490px){
  body {
-   background-image:url(360_07.png);
+   background-image:url(bg.gif);
    margin: 0px;
   }
 .block0 {
@@ -45,7 +45,7 @@ IMG.displayed {
 }
 @media screen and (max-width: 480px)  {
  body {
-   background-image:url(360_07.png);
+   background-image:url(bg.gif);
    margin: 0px;
   }
 .block0 {
