--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@ IMG.displayed {
     display: block;
     margin-left: auto;
     margin-right: auto }
-}
  .link {
     font-family: Verdana, Arial, Helvetica, sans-serif; 
     font-size: 24pt;
 text-align: center 
    }
+}
 @media screen and (max-width: 480px)  {
  body {
    background-image:url(bg.gif);
@@ -75,6 +75,11 @@ IMG.displayed {
     display: block;
     margin-left: auto;
     margin-right: auto }
+ .link {
+    font-family: Verdana, Arial, Helvetica, sans-serif; 
+    font-size: 24pt;
+text-align: center 
+   }
 }
 </style>
 </head>
@@ -85,12 +90,12 @@ IMG.displayed {
 	<tr>
 		<td> <div class="block0">
 </div><hr>
-<p  class="link"><a href="https://www.loanonline.us/payday/">Apply Payday Loan Click Here</a></p><br>
-<p  class="link"><a href="https://www.loanonline.us/installment/">Apply Installment Loan Click Here</a></p><br>
+<p  class="link"><a href="https://www.loanonline.us/payday/">Apply Payday Loan Click Here</a></p><hr>
+<p  class="link"><a href="https://www.loanonline.us/installment/">Apply Installment Loan Click Here</a></p><hr>
 <p><a href="https://loansolo.com/?aid=7378">
 <img class="displayed" src="loansolo.png" width="300" height="250"></a></p><hr>
 <p><a href="https://extralend.com/?aid=7378">
-<img  class="displayed" src="extralend.jpg" width="300" height="250"></a></p>
+<img  class="displayed" src="extralend.jpg" width="300" height="250"></a></p><hr>
 
 <p><h1>Apply Loans Online</h1><br>
 <b>Quick Payday Cash Loan - Get A Low Cost Cash Advance</b>
@@ -133,7 +138,7 @@ asked to fax any paperwork. However, the rates on such loans are just a little
 higher. Although the difference would be simply a few us dollars for 14 days, it 
 can total a considerable total, if you are borrowing a sizable sum of money, 
 like say $1000, or if you need to extend your payday loan beyond 14 days.</p>
-
+<hr>
 </td>
 	</tr>
 </table>
