--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ text-align: center
 	<tr>
 		<td> <div class="block0">
 </div><hr>
-<p  class="link"><a href="https://www.loanonline.us/payday/" rel="nofollow">Apply Payday Loan Click Here</a></p><hr>
-<p  class="link"><a href="https://www.loanonline.us/installment/" rel="nofollow">Apply Installment Loan Click Here</a></p><hr>
+<p  class="link"><a href="https://loansolo.com/?aid=7378" rel="nofollow">Apply Payday Loan Click Here</a></p><hr>
+<p  class="link"><a href="https://extralend.com/?aid=7378" rel="nofollow">Apply Installment Loan Click Here</a></p><hr>
 <p><a href="https://loansolo.com/?aid=7378" rel="nofollow">
 <img class="displayed" src="loansolo.png" width="300" height="250"></a></p><hr>
 <p><a href="https://extralend.com/?aid=7378" rel="nofollow">
