--- a/payday/index.html
+++ b/payday/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<script type="text/javascript">    var _lg_track_init_ = {aid: 7378}</script><script type="text/javascript" async="true" src="https://loansaccount.com/form/track.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-418681-48"></script>
 <script>
@@ -80,16 +81,10 @@
                     <div class="form-row">
                         <span class="custome-select-wrap js_element_error">
                             <select class="custome-select" name="requested_amount" id="sa">
-                                <option value="100">100</option>
-                                <option value="200">200</option>
-                                <option value="300" selected="selected">300</option>
-                                <option value="400">400</option>
-                                <option value="500">500</option>
-                                <option value="600">600</option>
-                                <option value="700">700</option>
-                                <option value="800">800</option>
-                                <option value="900">900</option>
-                                <option value="1000">1000</option>
+                                
+                                <option value="200">$200-$500</option>
+                                <option value="500" selected="selected">$500-$1000</option>
+                             
                             </select>
                         </span>
                         <span class="js_element_error">
