--- a/payday/apply.html
+++ b/payday/apply.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<script type="text/javascript">    var _lg_track_init_ = {aid: 7378}</script><script type="text/javascript" async="true" src="https://loansaccount.com/form/track.js"></script>
     <meta charset="utf-8"/>
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
     <title>Start</title>
@@ -66,11 +67,7 @@
         </span>
         <div class="offer-form formheader">
 
-            <script language="javascript">
-                var _a_i_d_ = '7378';
-                var _lg_form_init_ = {aid: _a_i_d_, template: "bablo"};
-                document.write('<scr' + 'ipt type="text/javascript" async="true" src="https://leadapi.net/form/applicationInit.js"></scr' + 'ipt><div id="_lg_form_"></div>');
-            </script>
+           <script type="text/javascript">var _lg_form_init_ = {    aid: "7378",    template: "wallet-lines"};</script><script type="text/javascript" async="true" src="https://loansaccount.com/form/applicationInit.js"></script><div id="_lg_form_"></div>
 
         </div>
         <div class="offer-form-features">
