--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ higher. Although the difference would be simply a few us dollars for 14 days, it
 can total a considerable total, if you are borrowing a sizable sum of money, 
 like say $1000, or if you need to extend your payday loan beyond 14 days.</p>
 <hr>
+<p><a href="https://www.loanonline.us/instant-same-day-payday-loans-online-california.html">https://www.loanonline.us/instant-same-day-payday-loans-online-california.html</a></p>		
 <p><a href="https://www.loanonline.us/map.html">https://www.loanonline.us/map.html</a></p>
 </td>
 	</tr>
