--- a/electrician.html
+++ b/electrician.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BRP8P8ZNDK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-BRP8P8ZNDK');
+</script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Electrician a free estimate</title>
@@ -49,6 +57,5 @@ We connect you with your local electrician. Fill out the form and get a free est
             </nav>
 www.homeservice.pp.ua © 2023
 </div>
-<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=Vyacheslav"></script>
 </body>
 </html>
