--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
 <link rel="stylesheet" href="./css/index.css">
-
+<link rel="canonical" href="https://www.fastloan.site/">
 </head>
 <body
   class="page page--index"
