--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
   &copy; www.fastloan.site.
   
     Todos los derechos reservados.
-  
+  <a href="https://www.fastloan.site/map.html">Site Map</a>
 </div>
 
     </div>
