--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <ul class="menu">
                     <li><a href="https://www.kartka.pp.ua/">Home Page</a></li>
                     <li><a href="mailto:js213205@gmail.com">Contact</a></li>
-                    <li><a href="https://www.kartka.pp.ua/sitemap.html">Site Map</a></li>
+                    <li><a href="https://www.kartka.pp.ua/sitemap.xml">Site Map</a></li>
                 </ul>
             </nav>
 https://www.kartka.pp.ua/ © 2024
