--- a/virtualna-kartka.html
+++ b/virtualna-kartka.html
@@ -15,7 +15,7 @@
 <title>Віртуальна картка з кредитним лімітом: Усе, що вам потрібно знати</title>
 <Meta name="description" Content="У сучасному світі фінансові інновацій однією з них є віртуальна картка з кредитним лімітом, вона стала невід'ємною частиною нашого життя." >
 <meta name="keywords" content="Віртуальна картка з кредитним лімітом," >
-<link rel="canonical" href="https://www.kartka.pp.ua/virtualna-kartka.html">
+<link rel="canonical" href="https://kartka.pp.ua/virtualna-kartka.html">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
