--- a/virtualna-kartka.html
+++ b/virtualna-kartka.html
@@ -41,7 +41,7 @@
 <div class="block1">
 <div class="block1_2">
 <p class="center">
-<a href="https://www.kartka.pp.ua/virtualna-kartka.html">
+<a href="https://kartka.pp.ua/virtualna-kartka.html">
 Віртуальна картка з кредитним лімітом</a>
 </p>
 </div>
@@ -49,12 +49,12 @@
 </div>
 <div class="footer"><nav>
                 <ul class="menu">
-                    <li><a href="https://www.kartka.pp.ua/">Home Page</a></li>
+                    <li><a href="https://kartka.pp.ua/">Home Page</a></li>
                     <li><a href="mailto:js213205@gmail.com">Contact</a></li>
-                    <li><a href="https://www.kartka.pp.ua/sitemap.xml">Site Map</a></li>
+                    <li><a href="https://kartka.pp.ua/sitemap.xml">Site Map</a></li>
                 </ul>
             </nav>
-https://www.kartka.pp.ua/ © 2024
+https://kartka.pp.ua/ © 2024
 </div>
 </body>
 </html>
