--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="block1">
 <div class="block1_2">
 <p class="center">
-<a href="https://medium.com/@glebshvets/virtualna-kartka-c33e13a57e0c">
+<a href="https://kartka.pp.ua/virtualna-kartka.html">
 Віртуальна картка з кредитним лімітом</a>
 </p>
 </div>
