--- a/form.html
+++ b/form.html
@@ -5,6 +5,6 @@
 </head>
 <body>
    <p>
-   <a href="https://monobank.ua/">Замовити картку Monobank</a></p>
+   <a href="https://monobank.ua/" rel="nofollow">Замовити картку Monobank</a></p>
 </body>
 </html>
