--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title>Банківські картки</title>
 <Meta name="description" Content="" >
 <meta name="keywords" content="" >
-<link rel="canonical" href="https://www.kartka.pp.ua/">
+<link rel="canonical" href="https://kartka.pp.ua/">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,12 +49,12 @@
 </div>
 <div class="footer"><nav>
                 <ul class="menu">
-                    <li><a href="https://www.kartka.pp.ua/">Home Page</a></li>
+                    <li><a href="https://kartka.pp.ua/">Home Page</a></li>
                     <li><a href="mailto:js213205@gmail.com">Contact</a></li>
-                    <li><a href="https://www.kartka.pp.ua/sitemap.xml">Site Map</a></li>
+                    <li><a href="https://kartka.pp.ua/sitemap.xml">Site Map</a></li>
                 </ul>
             </nav>
-https://www.kartka.pp.ua/ © 2024
+https://kartka.pp.ua/ © 2024
 </div>
 </body>
 </html>
