--- a/virtualna-kartka.html
+++ b/virtualna-kartka.html
@@ -15,7 +15,7 @@
 <title>Віртуальна картка з кредитним лімітом - Банківські картки</title>
 <Meta name="description" Content="У сучасному світі фінансові інновацій однією з них є віртуальна картка з кредитним лімітом, вона стала невід'ємною частиною нашого життя." >
 <meta name="keywords" content="Віртуальна картка з кредитним лімітом," >
-<link rel="canonical" href="https://www.kartka.pp.ua/virtualna-kartka.html">
+<link rel="canonical" href="https://kartka.pp.ua/virtualna-kartka.html">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@ Monobank</a></p><br><hr>
 <div class="block1">
 <div class="block1_2">
 <p class="center">
-<a href="https://www.kartka.pp.ua/">
+<a href="https://kartka.pp.ua/">
 Банківські картки</a>
 </p>
 </div>
@@ -55,12 +55,12 @@ Monobank</a></p><br><hr>
 </div>
 <div class="footer"><nav>
                 <ul class="menu">
-                    <li><a href="https://www.kartka.pp.ua/">Home Page</a></li>
+                    <li><a href="https://kartka.pp.ua/">Home Page</a></li>
                     <li><a href="mailto:js213205@gmail.com">Contact</a></li>
-                    <li><a href="https://www.kartka.pp.ua/sitemap.xml">Site Map</a></li>
+                    <li><a href="https://kartka.pp.ua/sitemap.xml">Site Map</a></li>
                 </ul>
             </nav>
-https://www.kartka.pp.ua/ © 2024
+https://kartka.pp.ua/ © 2024
 </div>
 </body>
 </html>
