--- a/virtualna-kartka.html
+++ b/virtualna-kartka.html
@@ -36,7 +36,7 @@
 <h1>Віртуальна картка з кредитним лімітом.</h1><hr>
 <p><br>
 <a href="https://kartka.pp.ua/form.html" rel="nofollow">
-<img src="kartka-monobank.jpg" width="300" height="400" alt="Віртуальна картка з кредитним лімітом"></a></p><br>
+<img src="віртуальна кредитна картка монобанка.png" width="300" height="300" alt="Віртуальна картка з кредитним лімітом"></a></p><br>
 <p>&nbsp;Отримайте віртуальну кредитну картку з кредитним лімітом майже з усіма властивостями пластикової без відвідування банку, якщо буде потрібно, пізніше можна буде переоформити на пластикову.</p>
 <p><a href="https://kartka.pp.ua/form.html" rel="nofollow">Замовити картку 
 Monobank</a></p><br><hr>
