--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="header_wrap">
         <header class="header">
             <a href="#">
-                <img src="" alt="Metabolism Booster Pills" class="logo">
+                <img src="choiceshop.png" alt="Metabolism Booster Pills" class="logo">
             </a>
            
         </header>
