--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="block1">
 <div class="block1_2">
 <p>
-<a href="https://tinyurl.com/metabolismboosterpills">
+<a href="https://tinyurl.com/metabolismboosterpills" rel="nofollow">
 <img border="0" src="weight%20loss%20pills.png" width="300" height="300"></a></p>
 </div>
 </div>
@@ -187,6 +187,8 @@
 <p>What sets <strong>Mitolyn weight loss supplements</strong> apart is their focus on mitochondrial health and comprehensive support for various aspects of metabolism, rather than just providing a temporary energy boost through stimulants. This approach leads to more sustainable results and better overall health.</p>
 <p>If you've been struggling with weight loss despite your best efforts, dealing with low energy levels, or facing age-related metabolic slowdown, <strong>Mitolyn metabolism booster</strong> could be the missing piece in your health puzzle. When combined with a balanced diet, regular physical activity, adequate sleep, and stress management, Mitolyn can help you achieve your weight loss goals and maintain a healthy weight long-term.</p>
 <p>Remember that while <strong>Mitolyn weight loss pills</strong> can significantly support your weight loss journey, they work best as part of a holistic approach to health and wellness. There are no magic pills for weight loss, but with the right support for your metabolism, the process can become much more manageable and successful. Consider giving <strong>Mitolyn metabolism booster</strong> a try and experience the difference that optimized metabolic function can make in your weight loss journey and overall vitality.</p>
+  <p><a href="https://tinyurl.com/metabolismboosterpills" rel="nofollow"><font size="5">Buy Now 
+Mitolyn: The Ultimate Metabolism Booster Pills for Effective Weight Loss</font></a></p>
 </div>
 </div>
 <div class="footer"><nav>
