--- a/assets/index.html
+++ b/assets/index.html
@@ -1,4 +1,6 @@
 <html>
+  <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
 <frameset rows="20%,80%">
 <frame src="header.html">
 <frame src="bodyframe.html" name="frame">
